# data-science-2026

./: .gitignore  README.md
project-first/: .env.example  00-setup.md  03-sdd-bdd-workflow.md  05-design-by-contract.md  06-embedding-and-chunking.md  09-mcp-server-and-skills.md  10-putting-it-together.md  docker-compose.yml  pyproject.toml  requirements.txt
project-first/.agent/config/: token-budget.yaml
project-first/.agent/logs/: README.md
project-first/.agent/mcp-servers/: audit-mcp.yaml  document-mcp.yaml  knowledge-mcp.yaml
project-first/.agent/memory/: constitution.md  diary.md
project-first/.agent/rules/: human-review-triggers.md  semantic-deny.md
project-first/docs/ADR/: ADR-001-embedding-model.md  ADR-002-chunking-strategy.md  README.md
project-first/features/: knowledge_ingestion.feature  knowledge_query.feature
project-first/features/steps/: ingestion_steps.py  query_steps.py
project-first/mcp-servers/knowledge-mcp/: requirements.txt  server.py
project-first/src/: utils.py
project-first/src/config/: llm_config.py
project-first/tests/: conftest.py
project-forcasting/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
project-forcasting/ch00-setup/: README.md  verify_install.py
project-forcasting/ch01-eda/: 01_load_and_visualize.py  02_decomposition.py  03_stationarity_test.py  04_acf_pacf.py  README.md
project-forcasting/ch02-statistical/: 01_exponential_smoothing.py  02_arima.py  03_sarima.py  04_garch.py  README.md
project-forcasting/ch03-prophet/: 01_basic_prophet.py  02_advanced_prophet.py  README.md
project-forcasting/ch04-features/: 01_lag_features.py  02_technical_indicators.py  03_time_features.py  04_feature_pipeline.py  README.md
project-forcasting/ch05-tree-models/: 01_lightgbm.py  02_xgboost.py  03_catboost.py  04_model_comparison.py  README.md
project-forcasting/ch06-deep-learning/: 01_lstm.py  02_transformer.py  README.md
project-forcasting/ch07-evaluation/: 01_walk_forward.py  02_backtesting.py  03_mlflow_tracking.py  README.md
project-forcasting/ch08-capstone/: README.md  main.py
project-forcasting/src/: __init__.py  config.py  data_loader.py  evaluator.py  feature_engineer.py  plot_utils.py
project-forcasting/tests/: test_evaluator.py  test_feature_engineer.py
project-playwright/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
project-playwright/ch00-setup/: README.md  verify_install.py
project-playwright/ch01-first-steps/: 01_open_browser.py  02_navigate_and_screenshot.py  03_pdf_export.py  04_browser_context.py  README.md
project-playwright/ch02-selectors/: 01_locator_basics.py  02_role_and_text.py  03_chaining_and_filtering.py  README.md
project-playwright/ch03-interaction/: 01_click_and_type.py  02_form_operations.py  03_keyboard_mouse.py  README.md
project-playwright/ch04-waiting/: 01_auto_waiting.py  02_explicit_wait.py  03_network_events.py  README.md
project-playwright/ch05-data-extraction/: 01_text_extraction.py  02_table_scraping.py  03_export_json_csv.py  README.md
project-playwright/ch06-advanced/: 01_stealth_mode.py  02_session_management.py  03_proxy_and_headers.py  04_popup_handler.py  README.md
project-playwright/ch07-testing/: README.md  test_basic.py  test_e2e_search.py
project-playwright/examples/: form_automation.py  news_scraper.py
project-playwright/utils/: __init__.py  browser.py  logger.py
(+257 files in other folders)
