[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "project-forcasting"
version = "0.1.0"
description = "時間序列預測學習專案：從統計方法到深度學習的完整學習路徑"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # === 資料處理 ===
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",

    # === 視覺化 ===
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",

    # === 統計方法 ===
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "arch>=6.2.0",           # GARCH 模型

    # === Prophet ===
    "prophet>=1.1.5",

    # === 機器學習 ===
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.4.0",         # 貝葉斯超參數優化

    # === 深度學習 ===
    "torch>=2.1.0",

    # === 時間序列專用 ===
    "sktime>=0.26.0",        # 統一的時間序列 ML 框架
    "pandas-ta>=0.3.14b",    # 技術指標

    # === 資料來源 ===
    "yfinance>=0.2.30",

    # === 實驗管理 ===
    "mlflow>=2.9.0",

    # === 工具 ===
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
    "ipywidgets>=8.1.0",
]
all = ["project-forcasting[dev,notebook]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: 需要較長執行時間的測試",
    "integration: 需要網路連線的整合測試",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100
